--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             </li>
             <li class="menu_item"><a href="#welcome" class="menu-link">About</a></li>
             <li class="menu_item"><a href="#insurance" class="menu-link">New Patients</a></li>
+            <li class="menu_item"><a href="#contact" class="menu-link">Contact Us</a></li>
             <li class="menu_item">
               <div class="btn-div btn-primary">
                 <a href="#book" class="menu-link">Book Online</a>
@@ -85,14 +86,13 @@
         <div class="container hero-container">
 
           <div class="hero-div">
-            <h1>Your Trusted Winwill Dentist</h1>
-            <p>Winwill Park Dentistry brings you a modern, calming experience that leaves your teeth healthy and your
-              soul rejuvenated.</p>
+            <h1>Winwill Park Dentist</h1>
+            <p>We bring you a modern, calming experience that leaves your teeth healthy and your soul rejuvenated. </p>
             <div>
 
               <div class="btns-div">
                 <div class="btn-div btn-primary"><a href="#book">Book Online</a></div>
-                <div class="btn-div btn-secondary"><a href="#">Call (951) 412-9171</a></div>
+                <div class="btn-div btn-primary"><a href="#">Call (951) 412-9171</a></div>
               </div>
             </div>
           </div>
@@ -101,7 +101,7 @@
 
       </div>
 
-      <img class="after-hero" src="img/hero-mobile.jpg" alt="" loading="lazy">
+      <!-- <img class="after-hero" src="img/hero-mobile.jpg" alt="" loading="lazy"> -->
     </section>
 
     <!-- Services  -->
@@ -110,7 +110,7 @@
         <div class="container services-container">
 
           <h2>Our Services</h2>
-          <h4>Everything You Need Under One Roof</h4>
+          <!-- <h4>Everything You Need Under One Roof</h4> -->
           <p>Our comprehensive services allow you to receive all needed dental care right here in our Winwill dentist's
             office – from dental cleanings and fillings to dental implants and extractions.</p>
 
@@ -133,7 +133,7 @@
                 <a href="#"> <img src="img/CaretCircleRight.svg" alt="">Deep Cleaning</a>
                 <a href="#"> <img src="img/CaretCircleRight.svg" alt="">Nightguards</a>
               </div>
-              <div class="btn-div btn-primary"><a href="#">Explore General Dentistry</a></div>
+              <!-- <div class="btn-div btn-primary"><a href="#">Explore General Dentistry</a></div> -->
             </div>
 
             <div class="services-1-right">
@@ -161,7 +161,7 @@
                 <a href="#"> <img src="img/CaretCircleRight.svg" alt="">Bone Graft</a>
                 <a href="#"> <img src="img/CaretCircleRight.svg" alt="">All On 4 Implants</a>
               </div>
-              <div class="btn-div btn-primary"><a href="#">Explore Surgical Dentistry</a></div>
+              <!-- <div class="btn-div btn-primary"><a href="#">Explore Surgical Dentistry</a></div> -->
             </div>
           </div>
 
@@ -178,7 +178,7 @@
                 <a href="#"> <img src="img/CaretCircleRight.svg" alt="">Clear Aligner</a>
                 <a href="#"> <img src="img/CaretCircleRight.svg" alt="">Veneers</a>
               </div>
-              <div class="btn-div btn-primary"><a href="#">Explore Cosmetic Dentistry</a></div>
+              <!-- <div class="btn-div btn-primary"><a href="#">Explore Cosmetic Dentistry</a></div> -->
             </div>
 
             <div class="services-3-right">
@@ -198,9 +198,13 @@
 
         <div class="container family-container">
 
+          <div class="family-image">
+            <img src="img/family.jpg" alt="kid smiling">
+          </div>
+
           <div class="family-div">
             <h2>Family Dentistry</h2>
-            <h4>Comprehensive Services</h4>
+            <!-- <h4>Comprehensive Services</h4> -->
 
             <div class="family-p">
               <p>All the care your family needs — all under one roof. From your infant's first dental exam to teeth
@@ -209,23 +213,31 @@
 
               <p>A little nervous about your visit? No problem! We take extra pride in treating patients who are
                 “dental-phobic” or who haven't seen the dentist in years. There's no judgment, just a friendly approach
-                to
-                family dental care you won't find anywhere else.</p>
+                to family dental care you won't find anywhere else.</p>
             </div>
 
             <h4>Come see us if… </h4>
             <ul class="family-ul">
-              <li>You're looking for a dentist who can care for your whole family
+              <li> <img src="img/checkmark.svg" alt="checkmark"> You're looking for a dentist who can care for your
+                whole family
               </li>
-              <li>You don't like the idea of shuttling your family around town to different dentists
+              <li><img src="img/checkmark.svg" alt="checkmark"> You don't like the idea of shuttling your family around
+                town to different dentists
               </li>
-              <li>You want to feel comfortable and welcomed by a friendly team that cares about you
+              <li><img src="img/checkmark.svg" alt="checkmark"> You want to feel comfortable and welcomed by a friendly
+                team that cares about you
               </li>
-              <li>You want to experience the best dentistry in Winwill</li>
+              <li><img src="img/checkmark.svg" alt="checkmark"> You want to experience the best dentistry in Winwill
+              </li>
             </ul>
 
 
-            <div class="btn-div btn-secondary"><a href="#">More About Us</a></div>
+            <div class="btns-div">
+              <div class="btn-div btn-primary"><a href="#book">Book Online</a></div>
+              <div class="btn-div btn-primary"><a href="#">Call (951) 412-9171</a></div>
+            </div>
+
+            <!-- <div class="btn-div btn-secondary"><a href="#">More About Us</a></div> -->
           </div>
 
         </div>
@@ -241,7 +253,7 @@
           <div class="welcome-grid">
             <div class="welcome-left">
               <h2>Welcome to Winwill Park Dentistry</h2>
-              <h4>Our Patient-Focused Approach</h4>
+              <!-- <h4>Our Patient-Focused Approach</h4> -->
               <div class="welcome-p">
                 <p>Your treatment plan will perfectly match your needs, lifestyle, and goals. Even if it's been years
                   since you last visited the dentist, we can help. Our comfortable office, compassionate team, and
@@ -275,25 +287,30 @@
           <div class="testimonials-grid">
 
             <div class="testimonial">
-              <p>I've been coming to this dentist office since I was 3 years old, and my family has been coming for
-                generations. It is so amazing to have a place where everyone knows your name!</p>
+              <p> <span class="quotes">❝</span> I've been coming to this dentist office since I was 3 years old, and my
+                family has been
+                coming for
+                generations. It is so amazing to have a place where everyone knows your name! <span
+                  class="quotes">❞</span> </p>
               <a href="#">
                 <p class="client">— Sam D.</p>
               </a>
             </div>
 
             <div class="testimonial">
-              <p>Everything about this office is excellent! The staff is friendly and attentive. The assistants make you
+              <p><span class="quotes">❝</span> Everything about this office is excellent! The staff is friendly and
+                attentive. The assistants make you
                 feel comfortable. Probably the best dentist I have ever seen. Wonderful place! Wonderful staff!
-                Wonderful doctors!</p>
+                Wonderful doctors! <span class="quotes">❞</span></p>
               <a href="#">
                 <p class="client">— Katie B.</p>
               </a>
             </div>
 
             <div class="testimonial">
-              <p>It's a pleasure to go to the dentist at Winwill. The office is gorgeous, feels peaceful & clean. The
-                staff has an upbeat attitude. Dr. Lifkinson is so kind & genuine.</p>
+              <p><span class="quotes">❝</span> It's a pleasure to go to the dentist at Winwill. The office is gorgeous,
+                feels peaceful & clean. The
+                staff has an upbeat attitude. Dr. Lifkinson is so kind & genuine. <span class="quotes">❞</span></p>
               <a href="#">
                 <p class="client">— Mary J.</p>
               </a>
@@ -357,7 +374,7 @@
 
               <div class="btns-div">
                 <div class="btn-div btn-primary"><a href="#book">Book Online</a></div>
-                <div class="btn-div btn-secondary"><a href="#">Call (951) 412-9171</a></div>
+                <div class="btn-div btn-primary"><a href="#">Call (951) 412-9171</a></div>
               </div>
             </div>
 
@@ -390,19 +407,19 @@
 
               <form id="book-form">
                 <div>
-                  <label for="name">*Full Name</label>
+                  <label for="name">Full Name (required)</label>
                   <input type="text" id="name" name="name" required>
                 </div>
 
 
                 <div class="email-phone">
                   <div>
-                    <label for="phone">*Phone</label>
+                    <label for="phone">Phone (required)</label>
                     <input type="tel" id="phone" name="phone" required>
                   </div>
 
                   <div>
-                    <label for="email">*Email</label>
+                    <label for="email">Email (required)</label>
                     <input type="email" id="email" name="email" required>
                   </div>
                 </div>
@@ -472,14 +489,14 @@
 
 
           <div class="footer-col-1">
-            <h4>Services</h4>
+            <h3>Services</h3>
             <a href="#">General</a>
             <a href="#">Cosmetic</a>
             <a href="#">Restorative</a>
           </div>
 
           <div class="footer-col-2">
-            <h4>Information</h4>
+            <h3>Information</h3>
             <a href="#welcome">About
             </a>
             <a href="#insurance">New Patients
@@ -490,13 +507,15 @@
 
 
           <div class="footer-col-4">
-            <h4>Contact</h4>
-            <p>6317 Winwill Park,
-              OH 71392</p>
+            <h3>Contact</h3>
+            <div class="footer-address-div">
+              <img src="img/map-pin.svg" alt="map-pin">
+              <p>6317 Winwill Park, OH 71392</p>
+            </div>
 
             <div class="btns-div">
               <div class="btn-div btn-primary"><a href="#book">Book Online</a></div>
-              <div class="btn-div btn-secondary"><a href="#">Call (951) 412-9171</a></div>
+              <div class="btn-div btn-primary"><a href="#">Call (951) 412-9171</a></div>
             </div>
 
 
