--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </section>
 
     <!-- Services  -->
-    <section id="services">
+    <section id="services" class="section">
       <div class="container-fluid services-fluid">
         <div class="container services-container">
 
@@ -193,7 +193,7 @@
 
 
     <!-- Family  -->
-    <section id="family">
+    <section id="family" class="section">
       <div class="container-fluid family-fluid">
 
         <div class="container family-container">
@@ -246,7 +246,7 @@
 
 
     <!-- About  -->
-    <section id="welcome">
+    <section id="welcome" class="section">
       <div class="welcome-fluid">
         <div class="container welcome-container">
 
@@ -277,7 +277,7 @@
 
 
     <!-- Testimonials  -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
       <div class="testimonials-fluid">
 
         <div class="container testimonials-container">
@@ -325,7 +325,7 @@
 
 
     <!-- Insurance  -->
-    <section id="insurance">
+    <section id="insurance" class="section">
       <div class="insurance-fluid">
         <div class="container insurance-container">
 
@@ -355,7 +355,7 @@
 
 
     <!-- Contact  -->
-    <section id="contact">
+    <section id="contact" class="section">
       <div class="contact-fluid">
         <div class="container contact-container">
 
@@ -395,7 +395,7 @@
 
 
     <!-- Book  -->
-    <section id="book">
+    <section id="book" class="section">
       <div class="book-fluid">
         <div class="container book-container">
 
