--- a/index.html
+++ b/index.html
@@ -287,30 +287,41 @@
           <div class="testimonials-grid">
 
             <div class="testimonial">
-              <p> <span class="quotes">❝</span> I've been coming to this dentist office since I was 3 years old, and my
+              <p>
+                <!-- <span class="quotes">❝</span> -->
+                I've been coming to this dentist office since I was 3 years old, and my
                 family has been
                 coming for
-                generations. It is so amazing to have a place where everyone knows your name! <span
-                  class="quotes">❞</span> </p>
+                generations. It is so amazing to have a place where everyone knows your name!
+                <!-- <span class="quotes">❞</span> -->
+              </p>
               <a href="#">
                 <p class="client">— Sam D.</p>
               </a>
             </div>
 
             <div class="testimonial">
-              <p><span class="quotes">❝</span> Everything about this office is excellent! The staff is friendly and
+              <p>
+                <!-- <span class="quotes">❝</span>  -->
+                Everything about this office is excellent! The staff is friendly and
                 attentive. The assistants make you
                 feel comfortable. Probably the best dentist I have ever seen. Wonderful place! Wonderful staff!
-                Wonderful doctors! <span class="quotes">❞</span></p>
+                Wonderful doctors!
+                <!-- <span class="quotes">❞</span> -->
+              </p>
               <a href="#">
                 <p class="client">— Katie B.</p>
               </a>
             </div>
 
             <div class="testimonial">
-              <p><span class="quotes">❝</span> It's a pleasure to go to the dentist at Winwill. The office is gorgeous,
+              <p>
+                <!-- <span class="quotes">❝</span>  -->
+                It's a pleasure to go to the dentist at Winwill. The office is gorgeous,
                 feels peaceful & clean. The
-                staff has an upbeat attitude. Dr. Lifkinson is so kind & genuine. <span class="quotes">❞</span></p>
+                staff has an upbeat attitude. Dr. Lifkinson is so kind & genuine.
+                <!-- <span class="quotes">❞</span> -->
+              </p>
               <a href="#">
                 <p class="client">— Mary J.</p>
               </a>
