--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container hero-container">
 
           <div class="hero-div">
-            <h1>Winwill Park Dentist</h1>
+            <h1>Winwill Park Dentistry</h1>
             <p>We bring you a modern, calming experience that leaves your teeth healthy and your soul rejuvenated. </p>
             <div>
 
@@ -288,12 +288,11 @@
 
             <div class="testimonial">
               <p>
-                <!-- <span class="quotes">❝</span> -->
-                I've been coming to this dentist office since I was 3 years old, and my
+                I've been coming to this dentistry since I was 3 years old, and my
                 family has been
                 coming for
-                generations. It is so amazing to have a place where everyone knows your name!
-                <!-- <span class="quotes">❞</span> -->
+                generations.
+                <!-- It is so amazing to have a place where everyone knows your name! -->
               </p>
               <a href="#">
                 <p class="client">— Sam D.</p>
@@ -302,12 +301,15 @@
 
             <div class="testimonial">
               <p>
-                <!-- <span class="quotes">❝</span>  -->
-                Everything about this office is excellent! The staff is friendly and
-                attentive. The assistants make you
-                feel comfortable. Probably the best dentist I have ever seen. Wonderful place! Wonderful staff!
-                Wonderful doctors!
-                <!-- <span class="quotes">❞</span> -->
+                Everything about this office is excellent!
+                The staff is friendly and
+                attentive.
+                <!-- The assistants make you
+                feel comfortable.  -->
+                Probably the best dentist I have ever seen.
+                <!-- Wonderful place!  -->
+                <!-- Wonderful staff!
+                Wonderful doctors! -->
               </p>
               <a href="#">
                 <p class="client">— Katie B.</p>
@@ -316,11 +318,10 @@
 
             <div class="testimonial">
               <p>
-                <!-- <span class="quotes">❝</span>  -->
                 It's a pleasure to go to the dentist at Winwill. The office is gorgeous,
                 feels peaceful & clean. The
-                staff has an upbeat attitude. Dr. Lifkinson is so kind & genuine.
-                <!-- <span class="quotes">❞</span> -->
+                staff has an upbeat attitude.
+                <!-- Dr. Lifkinson is so kind & genuine. -->
               </p>
               <a href="#">
                 <p class="client">— Mary J.</p>
