--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             </div>
 
             <div class="contact-right">
-              <div> <iframe
+              <div> <iframe title="Google map"
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14142.3381633173!2d152.1990388177132!3d-27.606407355000822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b96f24b135c4f69%3A0x400eef17f20e5f0!2sWinwill%20QLD%204347%2C%20Australia!5e0!3m2!1sen!2sru!4v1721194902531!5m2!1sen!2sru"
                   style="border:0;margin:auto;display:block" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe></div>
